--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,9 +41,11 @@ dependencies {
   implementation "androidx.room:room-runtime:$room_version"
   kapt "androidx.room:room-compiler:$room_version"
   implementation "androidx.room:room-ktx:$room_version"
+  implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0"
 
   implementation "org.koin:koin-core:$koin_version"
   implementation "org.koin:koin-android:$koin_version"
+  implementation "org.koin:koin-android-viewmodel:$koin_version"
 
   implementation 'com.github.bumptech.glide:glide:4.10.0'
   annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
